[package]
name = "log-assist"
version = "0.1.0"
edition = "2024"
license = "MIT"

description = "Async-friendly logging hub for Seq (now), with pluggable sinks for rolling files (next)."

readme = "README.md"
repository = "https://github.com/ikaranmali/log-assist-rs#"
homepage = "https://github.com/ikaranmali/log-assist-rs#"
documentation = "https://docs.rs/log-assist"

[lib]
name = "log_assist"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
thiserror = "1.0"
